@@ -31,6 +31,9 @@ values:
         Log-messages will not have timestamps prepended to them.
     itb(TIMESTAMPS)
         Log-messages will have timestamps prepended to them.
+    itb(UTCTIMESTAMPS)
+        Log-messages will have timestamps showing the UTC time prepended to
+        them.
     )
 
 manpagesection(CONSTRUCTORS)
