@@ -1,0 +1,3 @@
+#define LIBRARY             "logbuffer"
+
+#include "../icmconf"
