@@ -1,6 +1,11 @@
   * Using (s)random instead of (s)rand in Randbuffer
 
+  * Log(Buffer) now also supports FBB::UTCTIMESTAMPS to show the timestamps in
+    UTC. 
+
   * Fixed several flaws in man-pages
+
+    
 
 bobcat (3.23.00)
 
